--- a/templates/policy_enforcement_proxy/1/docker-compose.yml
+++ b/templates/policy_enforcement_proxy/1/docker-compose.yml
@@ -11,7 +11,7 @@ pep:
   stdin_open: true
   tty: true
   links:
-  - ${API_LINK}
+  - ${API_LINK}:api
   labels:
     io.rancher.container.pull_image: always
     io.rancher.scheduler.global: 'true'
