--- a/templates/policy_enforcement_proxy/1/docker-compose.yml
+++ b/templates/policy_enforcement_proxy/1/docker-compose.yml
@@ -10,7 +10,7 @@ pep:
     UPSTREAM_PORT: ${UPSTREAM_PORT}
   stdin_open: true
   tty: true
-  links:
+  external_links:
   - pep-manual/test:api
   labels:
     io.rancher.container.pull_image: always
@@ -18,8 +18,8 @@ pep:
 api:
   image: 912028902405.dkr.ecr.eu-west-1.amazonaws.com/pcc_mobility_api_mobile_view:master
   environment:
-    AGGREGATOR_HOST: ${AGGREGATOR_HOST}
-    AGGREGATOR_PORT: ${AGGREGATOR_PORT}
+    AGGREGATOR_HOST: aggregator
+    AGGREGATOR_PORT: 80
     ENVIRONMENT: ${ENVIRONMENT}
     MYSQL_CORE_DATABASE: ${MYSQL_CORE_DATABASE}}
     MYSQL_CORE_HOST: ${MYSQL_CORE_HOST}
