--- a/templates/policy_enforcement_proxy/1/docker-compose.yml
+++ b/templates/policy_enforcement_proxy/1/docker-compose.yml
@@ -16,7 +16,7 @@ pep:
     io.rancher.container.pull_image: always
     io.rancher.scheduler.global: 'true'
 api:
-  image: 912028902405.dkr.ecr.eu-west-1.amazonaws.com/pcc_mobility_api_mobile_view:master
+  image: ${IMAGE}:${BRANCH}
   environment:
     AGGREGATOR_HOST: aggregator
     AGGREGATOR_PORT: 80
