--- a/templates/policy_enforcement_proxy/1/rancher-compose.yml
+++ b/templates/policy_enforcement_proxy/1/rancher-compose.yml
@@ -22,22 +22,21 @@
       type: service
       variable: MYSQL_ASSETS_HOST
     - 
-      description: MYSQL_MOBILE_SETTINGS_HOST
+      variable: MYSQL_MOBILE_SETTINGS_HOST
       label: MYSQL_MOBILE_SETTINGS_HOST
+      description: MYSQL_MOBILE_SETTINGS_HOST
       required: true
       type: service
-      variable: MYSQL_MOBILE_SETTINGS_HOST
-
     - 
       variable: API_IMAGE
-      description: Image Url of the Api
       label: API_IMAGE
+      description: Image Url of the Api
       required: true
       default: "912028902405.dkr.ecr.eu-west-1.amazonaws.com/pcc_mobility_api_mobile_view"
     - 
-      variable: API_IMAGE_TAG
+      variable: API_IMAGE
       description: Choose a tag you want to use for the API
-      label: API_TAG
+      label: API_IMAGE
       required: true
       default: master
       type: enum
