--- a/templates/policy_enforcement_proxy/1/rancher-compose.yml
+++ b/templates/policy_enforcement_proxy/1/rancher-compose.yml
@@ -40,9 +40,10 @@
       required: true
       default: master
       type: enum
-        - "master"
-        - "uat"
-        - "qa"
+      options:
+        - master
+        - uat
+        - qa
     - 
       description: ENVIRONMENT
       label: ENVIRONMENT
