--- a/templates/policy_enforcement_proxy/1/rancher-compose.yml
+++ b/templates/policy_enforcement_proxy/1/rancher-compose.yml
@@ -32,6 +32,7 @@
       label: API_IMAGE_URL
       description: Image Url of the Api
       required: true
+      type: string
       default: "912028902405.dkr.ecr.eu-west-1.amazonaws.com/pcc_mobility_api_mobile_view"
     - 
       variable: API_IMAGE_TAG
