--- a/templates/policy_enforcement_proxy/1/rancher-compose.yml
+++ b/templates/policy_enforcement_proxy/1/rancher-compose.yml
@@ -1,7 +1,7 @@
 --- 
 .catalog: 
-  description: "Policy Enforcment Proxy - PEP"
-  name: "Policy Enforcment Proxy - PEP"
+  description: "Mobile APP Backend"
+  name: "Mobile APP Backend"
   questions: 
     - 
       description: MYSQL_CORE_HOST
