--- a/templates/file-repository/0/rancher-compose.yml
+++ b/templates/file-repository/0/rancher-compose.yml
@@ -50,3 +50,15 @@
       required: true
       type: string
       default: 8.8.8.8
+services:
+  pep:
+    start_on_create: true
+    health_check:
+      response_timeout: 2000
+      healthy_threshold: 2
+      port: 80
+      unhealthy_threshold: 3
+      initializing_timeout: 60000
+      interval: 2000
+      strategy: recreate
+      reinitializing_timeout: 60000
