--- a/templates/file-repository/0/docker-compose.yml
+++ b/templates/file-repository/0/docker-compose.yml
@@ -19,28 +19,21 @@ services:
       traefik.port: '80'
       traefik.enable: 'true'
       io.rancher.scheduler.global: 'true'
+
   api:
-    image: emilevauge/whoami
+    image: ${IMAGE}:${IMAGE_TAG}
+    environment:
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_HOST: ${DATABASE_HOST}
+      DATABASE_PORT: ${DATABASE_PORT}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      LOGGED_USER: ${LOGGED_USER}
+      UPLOAD_FOLDER: ${UPLOAD_FOLDER}
     stdin_open: true
+    external_links:
+    - infrastructure/mysql-server:mysql
     tty: true
     labels:
       io.rancher.container.pull_image: always
       io.rancher.scheduler.global: 'true'
-      
-#  api:
-#    image: 912028902405.dkr.ecr.eu-west-1.amazonaws.com/pcc_file_repository:qa
-#    environment:
-#      DATABASE_NAME: api_file_repository
-#      DATABASE_HOST: mysql
-#      DATABASE_PORT: '3306'
-#      DATABASE_USERNAME: root
-#      DATABASE_PASSWORD: b1gmac4fr33
-#      LOGGED_USER: homer_simpson
-#      UPLOAD_FOLDER: /var/www/html/uploads/
-#    stdin_open: true
-#    external_links:
-#    - infrastructure/mysql-server:mysql
-#    tty: true
-#    labels:
-#      io.rancher.container.pull_image: always
-#      io.rancher.scheduler.global: 'true'
