- fix mysql host

--- a/templates/file-repository/0/docker-compose.yml
+++ b/templates/file-repository/0/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     image: ${IMAGE}:${IMAGE_TAG}
     environment:
       DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_HOST: ${DATABASE_HOST}
+      DATABASE_HOST: mysql
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
