--- a/templates/file-repository/0/rancher-compose.yml
+++ b/templates/file-repository/0/rancher-compose.yml
@@ -94,7 +94,7 @@
       default: 3306
 
     - 
-      variable: DATABASE_USERNAME
+      variable: DATABASE_USERNAME_FILE
       label: Database Username
       description: Database Username
       required: true
@@ -102,7 +102,7 @@
       default: /run/secrets/mysql_api_file_repository_username
 
     - 
-      variable: DATABASE_PASSWORD
+      variable: DATABASE_PASSWORD_FILE
       label: Database Password
       description: Database Password
       required: true
