--- a/templates/file-repository/0/docker-compose.yml
+++ b/templates/file-repository/0/docker-compose.yml
@@ -29,8 +29,8 @@ services:
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_HOST: mysql
       DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      DATABASE_USERNAME_FILE: ${DATABASE_USERNAME_FILE}
+      DATABASE_PASSWORD_FILE: ${DATABASE_PASSWORD_FILE}
       LOGGED_USER: ${LOGGED_USER}
       UPLOAD_FOLDER: ${UPLOAD_FOLDER}
     stdin_open: true
