--- a/templates/file-repository/0/rancher-compose.yml
+++ b/templates/file-repository/0/rancher-compose.yml
@@ -9,7 +9,11 @@
       label: Domain name
       description: Domain name under which Traefik should match
       required: true
-      type: string
+      type: enum
+      options:
+        - apps-qa.controlcenter.lu
+        - apps-uat.controlcenter.lu
+        - apps.controlcenter.lu
 
     -
       variable: API_PATH_PREFIX
@@ -99,7 +103,7 @@
       description: Database Username Secret
       required: true
       type: string
-      default: /run/secrets/mysql_api_file_repository_username
+      default: /run/secrets/mysql_api_file_repo_username
 
     - 
       variable: DATABASE_PASSWORD_FILE
@@ -107,7 +111,7 @@
       description: Database Password Secret
       required: true
       type: string
-      default: /run/secrets/mysql_api_file_repository_password
+      default: /run/secrets/mysql_api_file_repo_password
 
     - 
       variable: LOGGED_USER
