--- a/templates/file-repository/0/docker-compose.yml
+++ b/templates/file-repository/0/docker-compose.yml
@@ -23,8 +23,8 @@ services:
   api:
     image: ${IMAGE}:${IMAGE_TAG}
     secrets:
-      - mysql_api_file_repository_username
-      - mysql_api_file_repository_password
+      - ${DATABASE_USERNAME_FILE}
+      - ${DATABASE_PASSWORD_FILE}
     environment:
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_HOST: mysql
